# qgis-stareau-plugin

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  database.mk  mkdocs.yml  pyproject.toml  setup-plugin.sh  upgrade-schema-version.sh
.docker/: db-runner-entrypoint  docker-compose.yml  export_database_structure_to_SQL.sh  install_db.sh  install_db_and_wait.sh  install_migrate_generate.sh  processing_doc.sh  reformat_sql_install.sh  run-tests.sh
.github/workflows/: ci.yml  publish-doc.yml  test-migration.yml  transifex.yml
requirements/: dev.txt  doc.txt  packaging.txt  tests.txt
stareau/: __init__.py  __main__.py  dockwidget.py  metadata.txt  plugin.py
stareau/install/csv/StaR-Eau/: README.md
stareau/install/sql/: 00_initialize_database.sql  99_test_data.sql  README.md
stareau/install/sql/StaR-Eau/: 01-creation domaines.sql  02-creation tables principales.sql  03-creation tables communes.sql  04-creation assainissement.sql  05-creation branchement assainissement.sql  06-creation eau potable.sql  07-creation branchement eau potable.sql  08-creation gestion pei.sql  10-creation_com_materiau.sql  README.md
stareau/install/sql/stareau/: 20_TABLE_SEQUENCE_DEFAULT.sql  30_VIEW.sql  60_CONSTRAINT.sql  70_COMMENT.sql  90_GLOSSARY.sql
stareau/plugin_tools/: custom_logging.py  feedback.py  i18n.py  resources.py
stareau/processing/: __init__.py  alg_configure_plugin.py  alg_create_database_local_interface.py  base_algorithm.py  provider.py  tools.py
stareau/processing/database/: __init__.py  alg_create.py  alg_upgrade.py  base.py
stareau/resources/ui/: dockwidget_base.ui
tests/: conftest.py  conftest_database.py  qgis_settings.ini  qgis_testing.py  test_load_structure.py
